Add Youtube Video

--- a/index.html
+++ b/index.html
@@ -34,10 +34,14 @@
   <dt>Three Time NBA Final's MVP</dt>
    </ul>   
  </div>
- 
+<br/>
+   <h3 class="Video">Highlights</h3>
+  <iframe width="620" height="480"
+ src="https://www.youtube.com/embed/8H6C87duyro" ></iframe>
+ <br/> 
  <h3>For more infomation on LeBron James</h3>
 <a target="_blank" href="http://www.nba.com/playerfile/lebron_james/">LeBron James NBA page</a>
-  </br>
+  <br/>
 <a target="_blank" href="https://en.wikipedia.org/wiki/LeBron_James">LeBron James Wikipedia Page</a>  <br/>
  <br/>
 <a target="_blank" href="https://github.com/pelimimian">Written and Coded by Peter O. Elimimian</a>
